GinPro2/bookapi.yml
apiVersion: v1
kind: Service
metadata:
  name: book-api
  labels:
    app: book-api
spec:
  type: NodePort
  ports:
    - port: 8000
  selector:
    app: book-api
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-api
  labels:
    app: book-api
spec:
  selector:
    matchLabels:
      app: book-api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: book-api
    spec:
      containers:
      - image: 111098/bookstore:latest
        name: book-api
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: book-api
