GinPro2/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
  - host: "book.kube.kfj.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: book-api
            port:
              number: 8000
